--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,32 @@
+attrs==23.2.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+easy_chromedriver_windows_install==0.0.2
 easygui==0.98.3
+h11==0.14.0
+idna==3.7
 llvmlite==0.42.0
 Markdown==3.6
 numba==0.59.1
 numpy==1.26.4
+outcome==1.3.0.post0
 pandas==2.2.2
+pycparser==2.22
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+requests==2.31.0
+selenium==4.20.0
+setuptools==69.5.1
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
 tzdata==2024.1
+undetected-chromedriver==3.5.5
+urllib3==2.2.1
+websockets==12.0
+wsproto==1.2.0
