--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,33 @@
 attrs==23.2.0
 certifi==2024.2.2
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
+cryptography==42.0.5
+cssselect==1.2.0
 easy_chromedriver_windows_install==0.0.2
 easygui==0.98.3
+et-xmlfile==1.1.0
 h11==0.14.0
 idna==3.7
 llvmlite==0.42.0
+lxml==5.2.1
 Markdown==3.6
 numba==0.59.1
 numpy==1.26.4
+openpyxl==3.1.2
 outcome==1.3.0.post0
 pandas==2.2.2
+pdfminer.six==20231228
+pdfquery==0.4.3
+pillow==10.3.0
 pycparser==2.22
+pyquery==2.0.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
+roman==4.2
 selenium==4.20.0
 setuptools==69.5.1
 six==1.16.0
