--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+altgraph==0.17.4
 attrs==23.2.0
+auto-py-to-exe==2.44.1
+bottle==0.12.25
+bottle-websocket==0.2.9
 certifi==2024.2.2
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
+colorama==0.4.6
 cryptography==42.0.5
 cssselect==1.2.0
 easy_chromedriver_windows_install==0.0.2
 easygui==0.98.3
+Eel==0.16.0
 et-xmlfile==1.1.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
 h11==0.14.0
 idna==3.7
 llvmlite==0.42.0
@@ -17,15 +27,21 @@ numba==0.59.1
 numpy==1.26.4
 openpyxl==3.1.2
 outcome==1.3.0.post0
+packaging==24.1
 pandas==2.2.2
 pdfminer.six==20231228
 pdfquery==0.4.3
+pefile==2023.2.7
 pillow==10.3.0
 pycparser==2.22
+pyinstaller==6.8.0
+pyinstaller-hooks-contrib==2024.7
+pyparsing==3.1.2
 pyquery==2.0.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32-ctypes==0.2.2
 requests==2.31.0
 roman==4.2
 selenium==4.20.0
@@ -33,6 +49,7 @@ setuptools==69.5.1
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+tqdm==4.66.4
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.11.0
@@ -40,4 +57,7 @@ tzdata==2024.1
 undetected-chromedriver==3.5.5
 urllib3==2.2.1
 websockets==12.0
+whichcraft==0.6.1
 wsproto==1.2.0
+zope.event==5.0
+zope.interface==6.4.post2
